# opentelemetry-instrumentation-jobs

./: LICENSE  README.md  main.py  pyproject.toml
opentelemetry_python_instrumentation_jobs/: __init__.py  fake_exporters.py  log_handler.py  metrics.py
