[tool.poetry]
name = "opentelemetry-instrumentation-jobs"
version = "0.1.0"
description = ""
authors = ["Vano Atabegashvili <vano.atabegashvili@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
opentelemetry-sdk= "1.28.1"
opentelemetry-exporter-otlp="1.28.1"
opentelemetry-instrumentation-logging="0.49b1"
opentelemetry-api="1.28.1"
tqdm = "4.67.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
