[tool.poetry]
name = "opentelemetry-python-instrumentation-jobs"
version = "0.3.2"
description = "This is a library that allows you to send metrics and logs of scheduled jobs in python to otel-collector."
authors = ["Vano Atabegashvili <vano.atabegashvili@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "opentelemetry_python_instrumentation_jobs"}]

[project.urls]
"Homepage" = "https://github.com/vvaannoo/opentelemetry-python-instrumentation-jobs"
"Source" = "https://github.com/vvaannoo/opentelemetry-python-instrumentation-jobs"

[tool.poetry.dependencies]
python = "^3.9"
opentelemetry-sdk= "1.28.1"
opentelemetry-exporter-otlp="1.28.1"
opentelemetry-instrumentation-logging="0.49b1"
opentelemetry-api="1.28.1"
tqdm = "4.67.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
schedule = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",



]